--- a/cms_design_electronics/cms_design_electronics/templates/includes/home_base.html
+++ b/cms_design_electronics/cms_design_electronics/templates/includes/home_base.html
@@ -5,35 +5,34 @@
     {% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ static }}landing_page/css/reset.css">
-    <script src="{{ static }}landing_page/js/d3.v3.min.js"></script>
-    <link rel="stylesheet" href="{{ static }}landing_page/css/bootstrap-min.css">
-    <script src="{{ static }}landing_page/js/jquery.min.js"></script>
-    <script src="{{ static }}landing_page/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="static/css/home/reset.css">
+    <script src="static/js/home/d3.v3.min.js"></script>
+    <link rel="stylesheet" href="static/css/home/bootstrap-min.css">
+    <script src="static/js/home/jquery.min.js"></script>
+    <script src="static/js/home/bootstrap.min.js"></script>
     <!-- Add dynamic updates to bode Plots -->
     {% block dynamicPlots %}
     {% endblock %}
     
     <!-- Add additional CSS in static file -->
-    <link rel="stylesheet" href="{{ static }}landing_page/css/styles.css">
-    <link rel="stylesheet" href="{{ static }}landing_page/css/bode-styles.css">
-    <link rel="stylesheet" href="{{ static }}landing_page/css/bootstrap-social.css">
+    <link rel="stylesheet" href="static/css/home/styles.css">
+    <link rel="stylesheet" href="static/css/home/bode-styles.css">
+    <link rel="stylesheet" href="static/css/home/bootstrap-social.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" 
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
 <body>
 
-    <div class="fixed-parent min-width">
-        <div id="header-row" class="row black-bottom-border margin-five flex-space-between">
-            {% block header %}
-            {% endblock %}
+    <div class="fixed-parent min-width margin-five">
+        <div id="header-row" class="row white-background black-bottom-border flex-space-between">
+            {% include "includes/header.html" %}
         </div>
     </div>
 
     <div>
         <div class="row margin-five min-width">
-            <div id="home-row" class="row grey-bottom-border">
+            <div id="home-row" class="row margin-header grey-bottom-border">
                 {% block home %}
                 {% endblock %}
             </div>
@@ -56,7 +55,7 @@
         {% include "includes/footer.html" %}
     </div>
   <!-- Add ability to include javascript plots into website -->
-  <script src="{{ static }}landing_page/js/plotBode.js" type="text/javascript"></script>
-  <script src="{{ static }}landing_page/js/ajaxSupport.js" type="text/javascript"></script>
+  <script src="static/js/home/plotBode.js" type="text/javascript"></script>
+  <script src="static/js/home/ajaxSupport.js" type="text/javascript"></script>
 </footer>
 </html>
