Updating home page.

--- a/cms_design_electronics/cms_design_electronics/templates/home/home_page.html
+++ b/cms_design_electronics/cms_design_electronics/templates/home/home_page.html
@@ -1,47 +1,1 @@
-{% extends "includes/home_base.html" %}
-
-<!-- 
-    Load wagtail core template tags and custom defined
-    navigation tags.
--->
-{% load wagtailcore_tags navigation_tags wagtailimages_tags  %}
-
-{% block title %}
-<title>{{page.site_title}}</title>
-
-{% endblock %}
-
-{% block home %}
-<div id="home-row-content" class="justify-center">
-    <div>
-        <h1>
-            {{page.promo_title}}
-        </h1>
-    </div>
-
-    <div id="home-row-picture">
-        <figure>
-            {% image page.promo_image height-400 %}
-        </figure>
-    </div>
-
-    <div>
-        {{page.promo_text|richtext }}
-    </div>
-
-</div>
-
-{% endblock %}
-
-{% block content %}
-<div id="content-row-header">
-    <h3>
-        {{page.site_blurb_title}}
-    </h3>
-</div>
-
-<!-- Featured sections portion of the landing page. -->
-<div id="content-row-content">
-    {{page.site_blurb|richtext }}
-</div>
-{% endblock %}
+{% extends "base.html" %}
