--- a/cms_design_electronics/cms_design_electronics/templates/base.html
+++ b/cms_design_electronics/cms_design_electronics/templates/base.html
@@ -1,6 +1,6 @@
-{% load static wagtailuserbar menus_tags %}
+{% load static wagtailuserbar %}
 
-{% get_menu "main" as navigation %}
+{# get_menu "main" as navigation #}
 
 
 <!DOCTYPE html>
@@ -11,18 +11,13 @@
             {% block title %}
                 {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
             {% endblock %}
-            {% block title_suffix %}
-                {% with self.get_site.site_name as site_name %}
-                    {% if site_name %}- {{ site_name }}{% endif %}
-                {% endwith %}
-            {% endblock %}
         </title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         {# Global stylesheets #}
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lux/bootstrap.min.css" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'css/mysite.css' %}">
 
         {% block extra_css %}
@@ -32,48 +27,58 @@
 
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
-
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="#">StartupLife</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav mr-auto">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light site-header sticky-top">
+                <a class="navbar-brand" href="/">
+                    {% with self.get_site.site_name as site_name %}
+                        {% if site_name %}
+                            {{ site_name }}
+                        {% endif %}
+                    {% endwith %}
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarColor03">
+                  <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">
+                            Temp
+                        </a>
                     </li>
-
-                    {% for item in navigation.menu_items.all %}
-                        <li>
-                            <a href="{{ item.link }}" class="nav-link"{% if item.open_in_new_tab %} target="_blank"{% endif %}>{{ item.title }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-          </nav>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
+                    </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+                </div>
+            </nav>
 
 
         {% block content %}{% endblock %}
 
         {# Global footer #}
+        <hr class="my-4">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    {% if settings.site_settings.SocialMediaSettings.facebook %}
-                        <a href="{{ settings.site_settings.SocialMediaSettings.facebook }}">
-                            <i class="fab fa-facebook-f"></i>
+                    {% if settings.site_settings.SocialMediaSettings.github %}
+                        <a href="{{ settings.site_settings.SocialMediaSettings.github }}" target="_blank">
+                            <i class="fab fa-github fa-4x" aria-hidden="True"></i>
                         </a>
                     {% endif %}
-                    {% if settings.site_settings.SocialMediaSettings.twitter %}
-                        <a href="{{ settings.site_settings.SocialMediaSettings.twitter }}">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    {% endif %}
-                    {% if settings.site_settings.SocialMediaSettings.youtube %}
-                        <a href="{{ settings.site_settings.SocialMediaSettings.youtube }}">
-                            <i class="fab fa-youtube"></i>
+                    {% if settings.site_settings.SocialMediaSettings.linkedin %}
+                        <a href="{{ settings.site_settings.SocialMediaSettings.linkedin }}" target="_blank">
+                            <i class="fab fa-linkedin fa-4x" aria-hidden="true"></i>
                         </a>
                     {% endif %}
                 </div>
