--- a/cms_design_electronics/cms_design_electronics/templates/base.html
+++ b/cms_design_electronics/cms_design_electronics/templates/base.html
@@ -68,22 +68,25 @@
 
         {# Global footer #}
         <hr class="my-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    {% if settings.site_settings.SocialMediaSettings.github %}
-                        <a href="{{ settings.site_settings.SocialMediaSettings.github }}" target="_blank">
-                            <i class="fab fa-github fa-4x" aria-hidden="True"></i>
-                        </a>
-                    {% endif %}
-                    {% if settings.site_settings.SocialMediaSettings.linkedin %}
-                        <a href="{{ settings.site_settings.SocialMediaSettings.linkedin }}" target="_blank">
-                            <i class="fab fa-linkedin fa-4x" aria-hidden="true"></i>
-                        </a>
-                    {% endif %}
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        {% if settings.site_settings.SocialMediaSettings.github %}
+                            <a href="{{ settings.site_settings.SocialMediaSettings.github }}" target="_blank">
+                                <i class="fab fa-github fa-4x" aria-hidden="True"></i>
+                            </a>
+                        {% endif %}
+                        {% if settings.site_settings.SocialMediaSettings.linkedin %}
+                            <a href="{{ settings.site_settings.SocialMediaSettings.linkedin }}" target="_blank">
+                                <i class="fab fa-linkedin fa-4x" aria-hidden="true"></i>
+                            </a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
+
+        </footer>
 
         {# Global javascript #}
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
