--- a/cms_design_electronics/cms_design_electronics/templates/dcdc/dcdc_page.html
+++ b/cms_design_electronics/cms_design_electronics/templates/dcdc/dcdc_page.html
@@ -68,14 +68,16 @@
             <fieldset>
             {% for sel_component in page.selected_components.all %}
                 <div class="form-group">
-                    <label for="sel_component_{{sel_component}}">{{sel_component}}</label>
-                    <input type="number" step="0.01" class="form-control" id="sel_component_{{sel_component}}" 
-                        name="sel_component_{{sel_component}}" placeholder="Enter value for {{sel_component}}." required>
+                    <label for="sel_component_{{sel_component.abbreviation}}">{{sel_component.abbreviation}} in {{sel_component.units}}</label>
+                    <input type="number" step="0.01" class="form-control" id="sel_component_{{sel_component.abbreviation}}" 
+                        name="sel_component_{{sel_component.abbreviation}}" 
+                        placeholder="Enter value for {{sel_component.abbreviation}}." required>
                 </div>
             {% endfor %}
 
             <input type="hidden" name="generateConverterAnalysis">
-            <input type="submit" class="btn btn-outline-primary" value="Generate Converter Analysis">
+            <input type="submit" class="btn btn-outline-primary" 
+                    value="Generate Converter Analysis" id="generateConverterButton">
             </fieldset>
         </form>
 
@@ -90,7 +92,7 @@
                 <div class="form-group">
                     <label for="design_equation_{{equation.description}}">{{equation.description}}</label>
                     <big class="form-text">{{equation.equation}}</big>
-                    <input readOnly="" class="form-control" id="rec_component_{{component}}" placeholder="Generate converter analysis to view results." required>
+                    <input readOnly="" class="form-control" id="design_equation_{{component}}" placeholder="Generate converter analysis to view results." required>
                 </div>
             {% endfor %}
 
@@ -143,10 +145,6 @@
                         $("#".concat(key)).addClass("invalid");
                     }
                 }
-            }).done(function(data) {
-
-            }).fail(function(data) {
-        // Optionally alert the user of an error here...
             });
         });
         return this;
@@ -155,6 +153,32 @@
 
 $(function() {
     $('#generateRecommendedComponents').genComponents();
+});
+
+(function($) {
+    $.fn.genAnalysis = function() {
+        this.submit(function(event) {
+            event.preventDefault();
+            var form = $(this);
+
+            $.ajax({
+                type: form.attr('method'),
+                url: form.attr('action'),
+                data: form.serialize(),
+                success: function(json){
+
+                },
+                error: function(json){
+
+                }
+            });
+        });
+        return this;
+    }
+})(jQuery)
+
+$(function() {
+    $('#generateConverterAnalysis').genAnalysis();
 });
 
 </script>
