--- a/cms_design_electronics/cms_design_electronics/templates/base.html
+++ b/cms_design_electronics/cms_design_electronics/templates/base.html
@@ -1,7 +1,4 @@
-{% load static wagtailuserbar %}
-
-{# get_menu "main" as navigation #}
-
+{% load static menu_tags %}
 
 <!DOCTYPE html>
 <html class="no-js" lang="en">
@@ -26,43 +23,7 @@
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
-        {% wagtailuserbar %}
-            <nav class="navbar navbar-expand-lg navbar-light bg-light site-header sticky-top">
-                <a class="navbar-brand" href="/">
-                    {% with self.get_site.site_name as site_name %}
-                        {% if site_name %}
-                            {{ site_name }}
-                        {% endif %}
-                    {% endwith %}
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              
-                <div class="collapse navbar-collapse" id="navbarColor03">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
-                            Temp
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
-                    </li>
-                  </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                  </form>
-                </div>
-            </nav>
-
+        {% main_menu %}
 
         {% block content %}{% endblock %}
 
