--- a/cms_design_electronics/cms_design_electronics/templates/base.html
+++ b/cms_design_electronics/cms_design_electronics/templates/base.html
@@ -28,8 +28,8 @@
         {% block content %}{% endblock %}
 
         {# Global footer #}
+        <footer id="footer" class="footer">
         <hr class="my-4">
-        <footer class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
