--- a/cms_design_electronics/cms_design_electronics/templates/contact/contact_page.html
+++ b/cms_design_electronics/cms_design_electronics/templates/contact/contact_page.html
@@ -5,9 +5,10 @@
 
     <div class="container mt-5 mb-5">
         <h1>{{ page.title }}</h1>
-        <p>
+        
+        <div class="text-primary">
             {{ self.intro|richtext }}
-        </p>
+        </div>
 
         <form action="{% pageurl page %}" method="POST">
             {% csrf_token %}
